[package]
name = "actix-contrib-logger"
version = "0.1.0"
edition = "2021"
description = "Drop-in replacement for the Actix Web Logger middleware"
license = "MIT OR Apache-2.0"
authors = [
    "Mariano Ruiz <mrsarm@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Joshua Parkin <josh.parkin@coasys.org>",
    "Yuki Okushi <jtitor@2k36.orgjtitor@2k36.org>",
    "Benny Nazimov (https://github.com/benny-n)",
    "Maxim Vorobjov (https://github.com/dunnock)",
]
readme = "README.md"
homepage = "https://github.com/mrsarm/rust-actix-contrib-logger"
repository = "https://github.com/mrsarm/rust-actix-contrib-logger"
categories = ["log", "logging", "logger", "actix-web", "http"]
exclude = [
    ".github/workflows/",
    ".gitignore",
    ".editorconfig",
]

[dependencies]
actix-http = "3.3"
actix-rt = "2.6"
actix-service = "2.0"
actix-utils = "3.0"
actix-web = "4.3"
bytes = "1"
env_logger = "0.10"
futures-core = { version = "0.3", features = [] }
http = "0.2"
pin-project-lite = "0.2"
log = "0.4"
regex = "1.9"
time = { version = "0.3", features = [ "formatting" ] }
